--- a/src/app/core/component/table/table.component.html
+++ b/src/app/core/component/table/table.component.html
@@ -12,30 +12,26 @@
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
     (matSortChange)="announceSortChange($any($event))">
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
+
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
     </ng-container>
     <!-- Department Column -->
-    <ng-container matColumnDef="Department">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Department </th>
-      <td mat-cell *matCellDef="let element"> {{element.Department}} </td>
+    <ng-container matColumnDef="mail">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Mail </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
     <!-- Symbol Column -->
-    <ng-container matColumnDef="office">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> office </th>
-      <td mat-cell *matCellDef="let element"> {{element.office}} </td>
+    <ng-container matColumnDef="DesignationId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation </th>
+      <td mat-cell *matCellDef="let element"> {{element.designation.name}} </td>
     </ng-container>
     <!-- status Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    <ng-container matColumnDef="RoleId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+      <td mat-cell *matCellDef="let element"> {{element.role.name}} </td>
     </ng-container>
     <!-- Action Column -->
     <ng-container matColumnDef="Action">
@@ -55,27 +51,27 @@
   <h2 mat-dialog-title> Edit</h2>
   <mat-dialog-content class="mat-typography">
     <div fxLayout="column">
-     <form [formGroup]="edit_data">
-      <div >
-        <div >
-          <mat-label fxFlex="40%">First Name</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
-            <input matInput placeholder="" formControlName="firstName">
-          </mat-form-field>
+      <form [formGroup]="edit_data">
+        <div>
+          <div>
+            <mat-label fxFlex="40%">First Name</mat-label>
+            <mat-form-field appearance="outline" fxFlex="60%">
+              <input matInput placeholder="" formControlName="firstName">
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-label fxFlex="40%"> Last name</mat-label>
+            <mat-form-field appearance="outline" fxFlex="60%">
+              <input matInput placeholder="" value="" formControlName="lastName">
+            </mat-form-field>
+          </div>
         </div>
-        <div >
-          <mat-label fxFlex="40%"> Last name</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
-            <input matInput placeholder="" value="" formControlName="lastName">
-          </mat-form-field>
-        </div>
-      </div>
-     </form>
+      </form>
     </div>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <button mat-stroked-button mat-dialog-close>Cancel</button>
-    <button mat-raised-button color="primary" [mat-dialog-close]="true" >Update</button>
+    <button mat-raised-button color="primary" [mat-dialog-close]="true">Update</button>
   </mat-dialog-actions>
 </ng-template>
 
