--- a/src/app/core/component/table/table.component.html
+++ b/src/app/core/component/table/table.component.html
@@ -12,23 +12,27 @@
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
     (matSortChange)="announceSortChange($any($event))">
-
+    <!-- id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
     </ng-container>
-    <!-- Department Column -->
+    <!-- mail-->
     <ng-container matColumnDef="mail">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Mail </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
-    <!-- Symbol Column -->
+    <!-- Designation Column -->
     <ng-container matColumnDef="DesignationId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation </th>
       <td mat-cell *matCellDef="let element"> {{element.designation.name}} </td>
     </ng-container>
-    <!-- status Column -->
+    <!-- Role Column -->
     <ng-container matColumnDef="RoleId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
       <td mat-cell *matCellDef="let element"> {{element.role.name}} </td>
@@ -37,16 +41,18 @@
     <ng-container matColumnDef="Action">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon (click)="onEdit(element)">edit</mat-icon>
+        <mat-icon [routerLink]="[ '/app/forms', 'edit' ,element.id ]">edit</mat-icon>
         <mat-icon (click)="onDelete(element)">delete</mat-icon>
       </td>
     </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
   </mat-paginator>
 </div>
+
 <ng-template #edit>
   <h2 mat-dialog-title> Edit</h2>
   <mat-dialog-content class="mat-typography">
