--- a/src/app/core/component/navbar/navbar.component.html
+++ b/src/app/core/component/navbar/navbar.component.html
@@ -21,7 +21,7 @@
     </mat-toolbar-row>
   </mat-toolbar>
   <mat-sidenav-container fxFlexFill>
-    <mat-sidenav #sidenav mode="side" fxHide.gt-md>
+    <mat-sidenav #sidenav mode="over" fxHide.gt-md>
       <mat-nav-list>
         <a routerLink="/app/home" mat-list-item> Home</a>
         <a routerLink="/app/table" mat-list-item> Table </a>
