--- a/src/app/core/component/forms/forms.component.html
+++ b/src/app/core/component/forms/forms.component.html
@@ -16,8 +16,8 @@
       <br>
 
       <div *ngIf="user=='admin' ">
-        <div fxLayout="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-          <div fxlayout="row" fxFlex="50%" fxFlex.lt-md="100%" fxLayout.lt-md="column">
+        <div fxLayout.gt-sm="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0%">
+          <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
             <mat-label fxFlex="38%">Admin</mat-label>
             <mat-form-field appearance="outline" fxFlex="57%">
               <input matInput placeholder="" formControlName="admin">
@@ -33,47 +33,50 @@
         </div>
       </div>
       <!-- First and lastname  -->
-      <div fxLayout="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-        <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column">
-          <mat-label fxFlex="40%">First Name</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
+      <div fxLayout.gt-sm="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0%">
+        <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+          <mat-label fxFlex.gt-md="40%">First Name</mat-label>
+          <mat-form-field appearance="outline" fxFlex.gt-md="60%">
             <input matInput placeholder="" formControlName="firstname">
-            <mat-error *ngIf="employee_detail?.get('firstName')?.hasError('required')">
+            <mat-error *ngIf="employee_detail?.get('firstname')?.hasError('required')">
               <!-- {{(msg|async)?.field_err}} -->
               This field is <strong>required</strong>
             </mat-error>
-            <mat-error *ngIf="employee_detail?.get('firstName')?.hasError('pattern')">
-              Not Valid
+            <mat-error *ngIf="employee_detail?.get('firstname')?.hasError('pattern')">
+              Not Valid value
             </mat-error>
           </mat-form-field>
         </div>
-        <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-          <mat-label fxFlex="40%"> Last name</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
+        <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+          <mat-label fxFlex.gt-md="40%">Last Name</mat-label>
+          <mat-form-field appearance="outline" fxFlex.gt-md="60%">
             <input matInput placeholder="" value="" formControlName="lastname">
-            <mat-error *ngIf="employee_detail?.get('lastName')?.hasError('required')">
+            <mat-error *ngIf="employee_detail?.get('lastname')?.hasError('required')">
               This field is <strong>required</strong>
             </mat-error>
-            <mat-error *ngIf="employee_detail?.get('lastName')?.hasError('pattern')">
+            <mat-error *ngIf="employee_detail?.get('lastname')?.hasError('pattern')">
               Not Valid
             </mat-error>
           </mat-form-field>
         </div>
       </div>
       <!-- Email  -->
-      <div fxLayout="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-        <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column">
-          <mat-label fxFlex="40%">Email</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
+      <div fxLayout.gt-sm="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
+        <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+          <mat-label fxFlex.gt-md="40%"> Email</mat-label>
+          <mat-form-field appearance="outline" fxFlex.gt-md="60%">
             <input matInput placeholder="" formControlName="email">
-            <mat-error *ngIf="employee_detail?.get('Email')?.hasError('required')">
+            <mat-error *ngIf="employee_detail?.get('email')?.hasError('required')">
               Email is <strong>required</strong>
+            </mat-error>
+            <mat-error *ngIf="employee_detail?.get('email')?.hasError('emailExist')">
+              Email is <strong>Already Exist</strong>
             </mat-error>
           </mat-form-field>
         </div>
-        <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-          <mat-label fxFlex="40%"> Alternate Email</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
+        <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+          <mat-label fxFlex.gt-md="40%">Alternate Email</mat-label>
+          <mat-form-field appearance="outline" fxFlex.gt-md="60%">
             <input matInput placeholder="" value="" formControlName="alternateEmail">
             <mat-error *ngIf="employee_detail?.get('AlterEmail')?.hasError('required')">
               Alternate Email is <strong>required</strong>
@@ -82,10 +85,10 @@
         </div>
       </div>
       <!-- dob & doj  -->
-      <div fxLayout="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-        <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column">
-          <mat-label fxFlex="40%">Date Of Birth</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
+      <div fxLayout.gt-sm="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
+        <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+          <mat-label fxFlex.gt-md="40%">Dob</mat-label>
+          <mat-form-field appearance="outline" fxFlex.gt-md="60%">
             <input matInput [matDatepicker]="picker" formControlName="created">
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
@@ -98,9 +101,9 @@
             </mat-error>
           </mat-form-field>
         </div>
-        <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-          <mat-label fxFlex="40%">Date Of Joining</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
+        <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+          <mat-label fxFlex.gt-md="40%">Doj</mat-label>
+          <mat-form-field appearance="outline" fxFlex.gt-md="60%">
             <input matInput [matDatepicker]="datepicker" formControlName="modified">
             <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
             <mat-datepicker #datepicker></mat-datepicker>
@@ -115,10 +118,10 @@
         </div>
       </div>
       <!-- designation and role  -->
-      <div fxLayout="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-        <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column">
-          <mat-label fxFlex="40%">Designation</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
+      <div fxLayout.gt-sm="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
+        <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+          <mat-label fxFlex.gt-md="40%">Designation</mat-label>
+          <mat-form-field appearance="outline" fxFlex.gt-md="60%">
             <mat-select value="Software developer" formControlName="designationId">
               <mat-option *ngFor="let item of designation" [value]="item.id">
                 {{item.name}}
@@ -129,9 +132,9 @@
             </mat-error>
           </mat-form-field>
         </div>
-        <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-          <mat-label fxFlex="40%"> Role</mat-label>
-          <mat-form-field appearance="outline" fxFlex="60%">
+        <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+          <mat-label fxFlex.gt-md="40%">Role</mat-label>
+          <mat-form-field appearance="outline" fxFlex.gt-md="60%">
             <mat-select formControlName="roleId">
               <mat-option *ngFor="let item of role" [value]="item.id">
                 {{item.name}}
@@ -152,24 +155,24 @@
           </div>
           <div *ngFor="let item of getContacts(); let i=index">
             <div [formGroupName]="i">
-              <div fxLayout="row" fxLayoutAlign="end center">
+              <div fxLayout.gt-sm="row" fxLayoutAlign="end center">
                 <mat-icon (click)="createArray()" *ngIf="mode !== 'view'" class="form-array-icon">add_circle</mat-icon>
                 <mat-icon (click)="removeArray(i)" *ngIf="i !== 0"
                   class="form-array-icon">remove_circle_outline</mat-icon>
               </div>
-              <div fxLayout="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-                <div fxlayout="row" fxFlex="50%" fxFlex.lt-md="100%" fxLayout.lt-md="column">
-                  <mat-label fxFlex="40%">address</mat-label>
-                  <mat-form-field appearance="outline" fxFlex="60%">
+              <div fxLayout.gt-sm="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
+                <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+                  <mat-label fxFlex.gt-md="40%">Address</mat-label>
+                  <mat-form-field appearance="outline" fxFlex.gt-md="60%">
                     <input matInput placeholder="" formControlName="address" value="address">
                     <mat-error *ngIf="getControls(employee_detail,i)?.address?.hasError('required')">
                       This field is <strong>required</strong>
                     </mat-error>
                   </mat-form-field>
                 </div>
-                <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-                  <mat-label fxFlex="40%"> city</mat-label>
-                  <mat-form-field appearance="outline" fxFlex="60%">
+                <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+                  <mat-label fxFlex.gt-md="40%">City</mat-label>
+                  <mat-form-field appearance="outline" fxFlex.gt-md="60%">
                     <input matInput placeholder="" value="city" formControlName="city">
                     <mat-error *ngIf="getControls(employee_detail,i)?.city?.hasError('required')">
                       This field is <strong>required</strong>
@@ -177,19 +180,19 @@
                   </mat-form-field>
                 </div>
               </div>
-              <div fxLayout="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-                <div fxlayout="row" fxFlex="50%" fxFlex.lt-md="100%" fxLayout.lt-md="column">
-                  <mat-label fxFlex="40%">state</mat-label>
-                  <mat-form-field appearance="outline" fxFlex="60%">
+              <div fxLayout.gt-sm="row" fxLayoutGap="5%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
+                <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+                  <mat-label fxFlex.gt-md="40%">State</mat-label>
+                  <mat-form-field appearance="outline" fxFlex.gt-md="60%">
                     <input matInput placeholder="" value="state" formControlName="state">
                     <mat-error *ngIf="getControls(employee_detail,i)?.state?.hasError('required')">
                       This field is <strong>required</strong>
                     </mat-error>
                   </mat-form-field>
                 </div>
-                <div fxlayout="row" fxFlex="50%" fxLayout.lt-md="column" fxLayoutGap.lt-md="0">
-                  <mat-label fxFlex="40%"> pincode</mat-label>
-                  <mat-form-field appearance="outline" fxFlex="60%">
+                <div fxFlex="50%" fxFlex.lt-md="100%" fxLayout="row" fxLayout.lt-md="column">
+                  <mat-label fxFlex.gt-md="40%">Pincode</mat-label>
+                  <mat-form-field appearance="outline" fxFlex.gt-md="60%">
                     <input matInput placeholder="" value="pincode" formControlName="pincode">
                     <mat-error *ngIf="getControls(employee_detail,i)?.pincode?.hasError('required')">
                       This field is <strong>required</strong>
@@ -201,10 +204,9 @@
           </div>
         </div>
       </div>
-      <div fxLayout="row" fxLayoutAlign="center center">
-        <button mat-raised-button color="primary" (click)="onSubmit()">{{ update ? "update" : "submit"}}</button>
-      </div>
-      <div fxLayout="row" fxLayoutAlign="end end">
+      <div fxLayout="column" fxLayoutAlign="center center">
+        <button mat-raised-button color="primary" (click)="onSubmit()">{{ update ? "update" :
+          "submit"}}</button><br><br>
         <a color="primary" routerLink="/app/password" mat-stroked-button>Change Password</a>
       </div>
     </form>
