interceptor and candeactivate

--- a/src/app/auth/component/login/login.component.html
+++ b/src/app/auth/component/login/login.component.html
@@ -4,15 +4,15 @@
       <br><br>
       <mat-form-field class="example-full-width">
         <mat-label>Your Email</mat-label>
-        <input fxFlex="100%" matInput formControlName="mail">
-        <mat-error *ngIf="Login_detail?.get('mail')?.hasError('required')">
+        <input fxFlex="100%" matInput formControlName="email">
+        <mat-error *ngIf="Login_detail?.get('email')?.hasError('required')">
           This field is <strong>required</strong>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Password</mat-label>
         <input type="password" matInput formControlName="password">
-        <mat-error *ngIf="Login_detail?.get('mail')?.hasError('required')">
+        <mat-error *ngIf="Login_detail?.get('email')?.hasError('required')">
           This field is required
         </mat-error>
       </mat-form-field>
