--- a/src/app/core/component/forms/forms.component.scss
+++ b/src/app/core/component/forms/forms.component.scss
@@ -12,7 +12,7 @@
 }
 
 .page_container {
-  border: 1px solid black;
+  // border: 1px solid black;
   background-color: white;
   padding: 20px;
 }
